--- a/SampleApps/AspNetWebFormApp/Web.config
+++ b/SampleApps/AspNetWebFormApp/Web.config
@@ -12,6 +12,7 @@
     <add name="DefaultConnection" providerName="System.Data.SqlClient" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=aspnet-AspNetWebFormApp-20130212232738;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnet-AspNetWebFormApp-20130212232738.mdf" />
   </connectionStrings>
   <system.web>
+    <customErrors mode="Off"/>
     <compilation debug="true" targetFramework="4.0" />
     <authentication mode="Forms">
       <forms loginUrl="~/Account/Login.aspx" timeout="2880" />
