--- a/ConDepSamples/packages.config
+++ b/ConDepSamples/packages.config
@@ -1,7 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="ConDep" version="1.0.12" targetFramework="net40" />
-  <package id="ConDep.Dsl" version="1.0.12" targetFramework="net40" />
+  <package id="AWSSDK" version="1.5.20.0" targetFramework="net40" />
+  <package id="ConDep" version="2.0.0-beta" targetFramework="net40" />
+  <package id="ConDep.Dsl" version="2.0.0-beta" targetFramework="net40" />
+  <package id="ConDep.Node" version="2.0.0-beta" targetFramework="net40" />
   <package id="log4net" version="2.0.0" targetFramework="net40" />
+  <package id="Microsoft.AspNet.WebApi.Client" version="4.0.30506.0" targetFramework="net40" />
+  <package id="Microsoft.AspNet.WebApi.Core" version="4.0.20710.0" targetFramework="net40" />
+  <package id="Microsoft.AspNet.WebApi.SelfHost" version="4.0.20918.0" targetFramework="net40" />
+  <package id="Microsoft.Net.Http" version="2.0.20710.0" targetFramework="net40" />
   <package id="NDesk.Options" version="0.2.1" targetFramework="net40" />
+  <package id="Newtonsoft.Json" version="4.5.11" targetFramework="net40" />
 </packages>
